src/adhocracy_frontend/adhocracy_frontend/static/stylesheets/scss/components/_comment.scss
/*doc
---
title: Comment
name: comment
category: Widgets
---

A comment widget consists of a comment-main widget and a list of child
comments (replies). There is a form for creating new replies.

The comment may have the states `is-selected` or `is-not-selected` where
the latter one is used if a different comment is selected. If no comment
is selected, no state is applied.

```html_example
<div class="comment">
    <div class="comment-main debug-placeholder">Comment Main</div>

    <div class="comment-children-create-form debug-placeholder">
        Comment Create Form
    </div>

    <div class="comment-children">
        <div class="comment">
            <div class="comment-main debug-placeholder">Comment Main</div>

            <div class="comment-children">
            </div>
        </div>
        <div class="comment">
            <div class="comment-main debug-placeholder">Comment Main</div>

            <div class="comment-children-create-form debug-placeholder">
                Comment Create Form
            </div>

            <div class="comment-children"></div>
        </div>
    </div>
</div>
<div class="comment">
    <div class="comment-main debug-placeholder">Comment Main</div>

    <div class="comment-children"></div>
</div>
```
*/
.comment-children {
    border-left: 1px solid $color-brand-one-normal;

    .comment {
        padding-right: 0;
    }
}

.comment {
    @include rem(margin-bottom, 2rem);
    @include rem(padding, 0 1rem);

    &.is-not-selected {
        background: $color-background-base-introvert;
    }

    &.is-selected {
        background: $color-background-base;
    }
}

.comment-content {
    line-height: 1.15;
    white-space: pre-line;
}

.comment-children-create-form,
.comment-children-edit-form {
    @extend .listing-create-form;
    background: $color-background-base-introvert;
}

/*doc
---
title: Comment Main
name: comment-main
parent: comment
---

```html_example
<div class="comment-main">
    <div class="comment-header">
        <div class="comment-header-column1">
            <span class="comment-header-creator">
                <a href="">god</a>
            </span>
            <span class="comment-header-date">
                25 minutes ago
            </span>
        </div>
        <div class="comment-header-column2">
            <span class="comment-header-links">
                <a href="" class="comment-header-link" title="Reply">
                    <i class="comment-header-icon icon-reply"></i>
                </a>
                <a href="" class="comment-header-link ng-scope" title="Edit">
                    <i class="comment-header-icon icon-pencil"></i>
                </a>
                <a href="" class="comment-header-link ng-scope" title="Report">
                    <i class="comment-header-icon icon-ban-circle"></i>
                </a>
                <a href="" class="comment-header-link ng-scope" title="Delete">
                    <i class="comment-header-icon icon-x"></i>
                </a>
            </span>
            <div class="rate">
                <span class="rate-difference is-positive">+1</span>
                    <a href="" class="rate-pro is-rate-button-active"><i class="icon-vote-up" title="Vote up"></i></a>
                    <a href="" class="rate-contra"><i class="icon-vote-down" title="Vote down"></i></a>
                </span>
            </div>
        </div>
    </div>
    <div class="comment-content">
        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a diam lectus. Sed sit amet ipsum mauris. Maecenas congue ligula ac quam viverra nec consectetur ante hendrerit. Donec et mollis dolor. Praesent et diam eget libero egestas mattis sit amet vitae augue.</p>
        <p>Nam tincidunt congue enim, ut porta lorem lacinia consectetur. Donec ut libero sed arcu vehicula ultricies a non tortor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean ut gravida lorem. Ut turpis felis, pulvinar a semper sed, adipiscing id dolor. Pellentesque auctor nisi id magna consequat sagittis. Curabitur dapibus enim sit amet elit pharetra tincidunt feugiat nisl imperdiet. Ut convallis libero in urna ultrices accumsan. Donec sed odio eros. Donec viverra mi quis quam pulvinar at malesuada arcu rhoncus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. In rutrum accumsan ultricies. Mauris vitae nisi at sem facilisis semper ac in est.</p>
    </div>
</div>

<div class="comment-main">
    <div class="comment-header">
        <div class="comment-header-column1">
            <span class="comment-header-creator">
                <a href="">god</a>
            </span>
            <span class="comment-header-date">
                25 minutes ago
            </span>
        </div>
        <div class="comment-header-column2">
            <span class="comment-header-links">
                <a href="" class="comment-header-link" title="Reply">
                    <i class="comment-header-icon icon-reply"></i>
                </a>
                <a href="" class="comment-header-link ng-scope" title="Edit">
                    <i class="comment-header-icon icon-pencil"></i>
                </a>
                <a href="" class="comment-header-link ng-scope" title="Report">
                    <i class="comment-header-icon icon-ban-circle"></i>
                </a>
                <a href="" class="comment-header-link ng-scope" title="Delete">
                    <i class="comment-header-icon icon-x"></i>
                </a>
            </span>
            <div class="rate">
                <span class="rate-difference is-positive">+1</span>
                    <a href="" class="rate-pro is-rate-button-active"><i class="icon-vote-up" title="Vote up"></i></a>
                    <a href="" class="rate-contra"><i class="icon-vote-down" title="Vote down"></i></a>
                </span>
            </div>
        </div>
    </div>
    <div class="comment-children-edit-form">
        <textarea class="comment-edit-form-text"></textarea>
        <footer class="form-footer">
            <input class="comment-create-form-button-submit button-cta form-footer-button-cta" type="submit" value="Submit">
            <a href="" class="button form-footer-button">CANCEL</a>
        </footer>
    </div>
</div>
```
*/

.comment-main {
    @include rem(padding-bottom, 20px);
}

.comment-title {
    a, a:hover, a:focus, a:active {
        color: inherit;
        text-decoration: inherit;
    }
}

.comment-content-edit-text {
    @include rem(margin-bottom, 0.5rem);
}

.comment-header {
    @include clearfix;
    @include rem(font-size, $font-size-small);
    @include rem(margin-bottom, 10px);
    color: $color-text-introvert;
    font-weight: $font-weight-introvert;
    padding-top: 3px;

    .comment-header-creator,
    .comment-header-date,
    .comment-header-links {
        a, a:hover, a:focus, a:active {
            @include disguised-link;
        }
    }

    .comment-header-creator {
        &:after {
            content: "|";
        }
    }

    .comment-header-edited {
        @include inline-block;
        color: $color-structure-introvert;
        font-style: italic;

        &:first-letter {
            text-transform: capitalize;
        }
    }


    .comment-header-creator a {
        color: $color-text-highlight-normal;
        padding-right: 3px;

        &:hover, &:focus, &:active {
            text-decoration: underline;
        }

        &:active {
            color: $color-text-highlight-extrovert;
        }
    }

    .comment-header-date {
        padding-left: 3px;
    }

    .comment-header-links {
        @include rem(padding-right, 20px);

        a {
            @include rem(margin-left, 14px);
        }
    }

    .comment-header-link {
        &:after {
            content: attr(title);
        }
    }

    .comment-header-column1,
    .comment-header-column2 {
        @include text-align(right);
        float: right;
    }

    .comment-header-column1 {
        float: left;
    }

    .rate {
        @include inline-block;
    }
}

.comment-create-form {
    @include clearfix;
}

.comment-create-form-text,
.comment-edit-form-text {
    @include rem(min-height, 5.8rem);
    background: $color-text-inverted;
}

.comment-edit-form-text {
    min-height: 1px;
}

.comment-create-form-button-submit {
    float: right;
}

/*doc
---
title: Comment Create Form
name: comment-create-form
parent: comment
---

```html_example
<form class="comment-create-form">
    <textarea class="comment-create-form-text"></textarea>
    <footer class="form-footer">
        <input class="comment-create-form-button-submit button-cta form-footer-button-cta" type="submit" value="Submit">
    </footer>
</form>
```
*/

